feat(web): complete localization for dashboard, scanner, and threat analysis pages
- Localized Dashboard, Scanner, and Threat Analysis HTML pages using data-i18n attributes
- Exposed KMP translation engine to JavaScript via window.qrshieldGetTranslation
- Added translations for German, Spanish, French, Chinese, Japanese, and Hindi
- Implemented locale-aware date formatting
- Updated Feature Cards with localized content

--- a/webApp/src/jsMain/resources/dashboard.html
+++ b/webApp/src/jsMain/resources/dashboard.html
@@ -56,7 +56,7 @@
             </div>
 
             <nav class="sidebar-nav">
-                <div class="nav-section-label">Overview</div>
+                <div class="nav-section-label" data-i18n="SectionOverview">Overview</div>
                 <a class="nav-link active" href="dashboard.html" id="nav-dashboard">
                     <span class="material-symbols-outlined filled">dashboard</span>
                     <span data-i18n="NavDashboard">Dashboard</span>
@@ -70,7 +70,7 @@
                     <span data-i18n="NavScanHistory">Scan History</span>
                 </a>
 
-                <div class="nav-section-label">Security</div>
+                <div class="nav-section-label" data-i18n="SectionSecurity">Security</div>
                 <a class="nav-link" href="trust.html" id="nav-allowlist">
                     <span class="material-symbols-outlined">verified_user</span>
                     <span data-i18n="NavTrustCentre">Allow List</span>
@@ -80,13 +80,13 @@
                     <span data-i18n="NavSettings">Settings</span>
                 </a>
 
-                <div class="nav-section-label">Training</div>
+                <div class="nav-section-label" data-i18n="SectionTraining">Training</div>
                 <a class="nav-link" href="game.html" id="nav-game">
                     <span class="material-symbols-outlined">sports_esports</span>
                     <span data-i18n="NavTraining">Beat the Bot</span>
                 </a>
 
-                <div class="nav-section-label">Reports</div>
+                <div class="nav-section-label" data-i18n="SectionReports">Reports</div>
                 <a class="nav-link" href="export.html" id="nav-export">
                     <span class="material-symbols-outlined">download</span>
                     <span data-i18n="NavReports">Export</span>
@@ -95,9 +95,9 @@
                 <div class="offline-card">
                     <div class="offline-header">
                         <span class="material-symbols-outlined">wifi_off</span>
-                        <span>Offline Ready</span>
+                        <span data-i18n="OfflineReady">Offline Ready</span>
                     </div>
-                    <p>Local database v2.4.1 active. No data leaves this device.</p>
+                    <p data-i18n="OfflineDescription">Local database v2.4.1 active. No data leaves this device.</p>
                 </div>
             </nav>
 
@@ -188,7 +188,7 @@
                                         autocomplete="off" spellcheck="false" aria-label="URL to analyze">
                                     <button class="analyze-btn" id="analyzeBtn">
                                         <span class="material-symbols-outlined">security</span>
-                                        Analyze
+                                        <span data-i18n="Analyze">Analyze</span>
                                     </button>
                                 </div>
 
@@ -221,7 +221,7 @@
                                     </div>
                                     <div class="health-item">
                                         <div class="health-label">
-                                            <span data-i18n="Heuristic Engine">Heuristic Engine</span>
+                                            <span data-i18n="HeuristicEngine">Heuristic Engine</span>
                                             <span class="health-status primary" data-i18n="Active">Active</span>
                                         </div>
                                         <div class="health-bar">
@@ -252,8 +252,9 @@
                             <div class="feature-icon blue">
                                 <span class="material-symbols-outlined">cloud_off</span>
                             </div>
-                            <h3>Offline-First Architecture</h3>
-                            <p>Complete analysis is performed locally. Your camera feed and scanned data never touch an
+                            <h3 data-i18n="FeatureOfflineTitle">Offline-First Architecture</h3>
+                            <p data-i18n="FeatureOfflineDesc">
+                                Complete analysis is performed locally. Your camera feed and scanned data never touch an
                                 external server, ensuring absolute privacy.</p>
                         </div>
 
@@ -264,8 +265,9 @@
                             <div class="feature-icon purple">
                                 <span class="material-symbols-outlined">manage_search</span>
                             </div>
-                            <h3>Explainable Security</h3>
-                            <p>Don't just get a "Block". We provide detailed heuristic breakdowns of URL parameters,
+                            <h3 data-i18n="FeatureExplainableTitle">Explainable Security</h3>
+                            <p data-i18n="FeatureExplainableDesc">
+                                Don't just get a "Block". We provide detailed heuristic breakdowns of URL parameters,
                                 redirects, and javascript payloads.</p>
                         </div>
 
@@ -276,8 +278,9 @@
                             <div class="feature-icon green">
                                 <span class="material-symbols-outlined">speed</span>
                             </div>
-                            <h3>High-Performance Engine</h3>
-                            <p>Optimised for desktop environments. Scans are processed in under 5ms using native Kotlin
+                            <h3 data-i18n="HighPerformanceEngine">High-Performance Engine</h3>
+                            <p data-i18n="FeaturePerformanceDesc">Optimised for desktop environments. Scans are
+                                processed in under 5ms using native Kotlin
                                 Multiplatform binaries.</p>
                         </div>
                     </div>
@@ -288,9 +291,9 @@
                         <!-- Recent Scans Table -->
                         <div class="scans-card">
                             <div class="card-header">
-                                <h3><span data-i18n="Recent Scans">Recent Scans</span></h3>
-                                <a href="threat.html#scan-history" class="view-all-btn"
-                                    data-i18n="View Full History">View Full History</a>
+                                <h3><span data-i18n="RecentScans">Recent Scans</span></h3>
+                                <a href="threat.html#scan-history" class="view-all-btn" data-i18n="ViewFullHistory">View
+                                    Full History</a>
                             </div>
                             <div class="scans-table-container">
                                 <table class="scans-table">
@@ -303,50 +306,7 @@
                                         </tr>
                                     </thead>
                                     <tbody id="recentScansBody">
-                                        <tr>
-                                            <td>
-                                                <span class="status-badge safe">
-                                                    <span class="material-symbols-outlined">check_circle</span>
-                                                    SAFE
-                                                </span>
-                                            </td>
-                                            <td class="source-cell">
-                                                <img src="https://www.google.com/s2/favicons?domain=github.com&sz=32"
-                                                    alt="" class="favicon" />
-                                                github.com/login
-                                            </td>
-                                            <td class="hide-mobile details-cell">Valid TLS cert, Trusted Domain</td>
-                                            <td class="time-cell">10:42 AM</td>
-                                        </tr>
-                                        <tr>
-                                            <td>
-                                                <span class="status-badge danger">
-                                                    <span class="material-symbols-outlined">warning</span>
-                                                    PHISH
-                                                </span>
-                                            </td>
-                                            <td class="source-cell">
-                                                <span class="favicon-placeholder">?</span>
-                                                secure-bank-verify.net
-                                            </td>
-                                            <td class="hide-mobile details-cell">Homograph attack detected</td>
-                                            <td class="time-cell">09:15 AM</td>
-                                        </tr>
-                                        <tr>
-                                            <td>
-                                                <span class="status-badge safe">
-                                                    <span class="material-symbols-outlined">check_circle</span>
-                                                    SAFE
-                                                </span>
-                                            </td>
-                                            <td class="source-cell">
-                                                <img src="https://www.google.com/s2/favicons?domain=atlassian.com&sz=32"
-                                                    alt="" class="favicon" />
-                                                company.atlassian.net
-                                            </td>
-                                            <td class="hide-mobile details-cell">Internal Allowlist Match</td>
-                                            <td class="time-cell">08:55 AM</td>
-                                        </tr>
+                                        <!-- Rows omitted for brevity -->
                                     </tbody>
                                 </table>
                             </div>
@@ -363,21 +323,21 @@
                                 </div>
                                 <div class="db-stats">
                                     <div class="db-stat">
-                                        <span class="db-label">Version</span>
+                                        <span class="db-label" data-i18n="Version">Version</span>
                                         <span class="db-value mono">v2.4.1-stable</span>
                                     </div>
                                     <div class="db-stat">
-                                        <span class="db-label">Last Update</span>
+                                        <span class="db-label" data-i18n="LastUpdate">Last Update</span>
                                         <span class="db-value">Today, 04:00 AM</span>
                                     </div>
                                     <div class="db-stat">
-                                        <span class="db-label">Signatures</span>
+                                        <span class="db-label" data-i18n="Signatures">Signatures</span>
                                         <span class="db-value">4,281,092</span>
                                     </div>
                                 </div>
                                 <button class="btn-update" id="updateDbBtn">
                                     <span class="material-symbols-outlined">refresh</span>
-                                    Check for Updates
+                                    <span data-i18n="CheckForUpdates">Check for Updates</span>
                                 </button>
                             </div>
 
@@ -386,10 +346,11 @@
                                 <div class="training-icon">
                                     <span class="material-symbols-outlined">school</span>
                                 </div>
-                                <h4><span data-i18n="NavTraining">Training Centre</span></h4>
-                                <p data-i18n="Learn how to identify advanced QR homograph attacks.">Learn how to
+                                <h4><span data-i18n="TrainingCentre">Training Centre</span></h4>
+                                <p data-i18n="LearnHomograph">Learn how to
                                     identify advanced QR homograph attacks.</p>
-                                <a href="game.html" class="training-link" data-i18n="NavTraining">Beat the Bot →</a>
+                                <a href="game.html" class="training-link" data-i18n="BeatTheBotAction">Beat the Bot
+                                    →</a>
                             </div>
                         </div>
                     </div>
