refactor(web): centralize scanner history and dashboard integration
- Refactor scanner.js to use QRShieldUI for history management
- Update dashboard.js to fetch stats/history from QRShieldUI
- Add dynamic DB stats updates to dashboard
- Unify version numbers to v2.4.1
- Export stats functions in shared-ui.js

--- a/webApp/src/jsMain/resources/dashboard.html
+++ b/webApp/src/jsMain/resources/dashboard.html
@@ -324,15 +324,15 @@
                                 <div class="db-stats">
                                     <div class="db-stat">
                                         <span class="db-label" data-i18n="Version">Version</span>
-                                        <span class="db-value mono">v2.4.1-stable</span>
+                                        <span class="db-value mono" id="dbVersion">v2.4.1</span>
                                     </div>
                                     <div class="db-stat">
                                         <span class="db-label" data-i18n="LastUpdate">Last Update</span>
-                                        <span class="db-value">Today, 04:00 AM</span>
+                                        <span class="db-value" id="dbLastUpdate">Today, 04:00 AM</span>
                                     </div>
                                     <div class="db-stat">
                                         <span class="db-label" data-i18n="Signatures">Signatures</span>
-                                        <span class="db-value">4,281,092</span>
+                                        <span class="db-value" id="dbSignatures">4,281,092</span>
                                     </div>
                                 </div>
                                 <button class="btn-update" id="updateDbBtn">
