--- a/webApp/src/jsMain/resources/scanner.html
+++ b/webApp/src/jsMain/resources/scanner.html
@@ -254,7 +254,7 @@
                                         <span class="material-symbols-outlined status-icon info">database</span>
                                         <span class="status-name" data-i18n="LocalDb">Local DB</span>
                                     </div>
-                                    <span class="status-badge version">V.2.4.0</span>
+                                    <span class="status-badge version">v2.4.1</span>
                                 </div>
                                 <div class="status-item">
                                     <div class="status-info">
