feat: implement web platform bridge for secure random and browser APIs, replacing insecure random with Web Crypto API"

--- a/webApp/src/jsMain/resources/export.html
+++ b/webApp/src/jsMain/resources/export.html
@@ -355,6 +355,8 @@
         <span class="toast-message" id="toastMessage">Success!</span>
     </div>
 
+    <!-- Platform Bridge (Crypto, Clipboard, etc.) -->
+    <script src="platform-bridge.js"></script>
     <!-- Kotlin/JS Bundle -->
     <script src="webApp.js"></script>
     <!-- Theme System -->
