--- a/webApp/src/jsMain/resources/index.html
+++ b/webApp/src/jsMain/resources/index.html
@@ -400,6 +400,8 @@
         </div>
     </div>
 
+    <!-- Platform Bridge (Crypto, Clipboard, etc.) -->
+    <script src="platform-bridge.js"></script>
     <!-- Kotlin/JS Bundle -->
     <script src="webApp.js"></script>
     <!-- UI Logic -->
