--- a/webApp/src/jsMain/resources/trust.html
+++ b/webApp/src/jsMain/resources/trust.html
@@ -48,7 +48,8 @@
         <aside class="sidebar" id="sidebar">
             <div class="sidebar-header">
                 <h1 class="logo">
-                    <img src="assets/icon-128.png" alt="QR-SHIELD Logo" class="logo-icon" style="width: 28px; height: 28px;">
+                    <img src="assets/icon-128.png" alt="QR-SHIELD Logo" class="logo-icon"
+                        style="width: 28px; height: 28px;">
                     QR-SHIELD
                 </h1>
                 <p class="version-status">v2.4.1 • <span class="status-secure">System Secure</span></p>
@@ -395,6 +396,8 @@
         <span class="toast-message" id="toastMessage">Success!</span>
     </div>
 
+    <!-- Platform Bridge (Crypto, Clipboard, etc.) -->
+    <script src="platform-bridge.js"></script>
     <!-- Kotlin/JS Bundle -->
     <script src="webApp.js"></script>
     <!-- Theme System -->
