--- a/webApp/src/jsMain/resources/results.html
+++ b/webApp/src/jsMain/resources/results.html
@@ -355,6 +355,8 @@
         <span class="toast-message" id="toastMessage">Link copied to clipboard!</span>
     </div>
 
+    <!-- Platform Bridge (Crypto, Clipboard, etc.) -->
+    <script src="platform-bridge.js"></script>
     <!-- Kotlin/JS Bundle -->
     <script src="webApp.js"></script>
     <!-- Theme System -->
