feat: achieve 100% cross-platform parity for Beat the Bot, update UI labels, implement brain visualizer, and add malicious URL test data.

--- a/webApp/src/jsMain/resources/game.html
+++ b/webApp/src/jsMain/resources/game.html
@@ -301,6 +301,17 @@
                                     </div>
                                 </div>
 
+                                <!-- Brain Visualizer Section -->
+                                <div class="brain-visualizer-section" id="brainVisualizerSection">
+                                    <h4>AI Neural Analysis</h4>
+                                    <p class="brain-description visually-hidden" id="brainDescription" role="status"
+                                        aria-live="polite">
+                                        AI Neural Net: No threats detected. Brain pattern is calm and blue.
+                                    </p>
+                                    <canvas id="brainCanvas" width="300" height="200" aria-hidden="true"></canvas>
+                                    <div class="signal-badges" id="signalBadges"></div>
+                                </div>
+
                                 <div class="bot-reasoning">
                                     <p class="reasoning-title">Why the bot flagged it <span
                                             id="botDecision">Safe</span>:</p>
@@ -409,6 +420,8 @@
     <script src="transitions.js"></script>
     <!-- Shared UI Components -->
     <script src="shared-ui.js"></script>
+    <!-- Brain Visualizer -->
+    <script src="visualizer.js"></script>
     <!-- Game Logic -->
     <script src="game.js"></script>
 
