--- a/webApp/src/jsMain/resources/export.html
+++ b/webApp/src/jsMain/resources/export.html
@@ -37,6 +37,8 @@
     <link href="transitions.css" rel="stylesheet" />
     <!-- Shared UI Components -->
     <link href="shared-ui.css" rel="stylesheet" />
+    <!-- Unified Header Styles -->
+    <link href="shared-header.css" rel="stylesheet" />
 </head>
 
 <body class="export-body">
@@ -116,7 +118,6 @@
                     <button class="menu-toggle" id="menuToggle" aria-label="Toggle menu">
                         <span class="material-symbols-outlined">menu</span>
                     </button>
-                    <span class="breadcrumbs-header">Workspace / Security / Reports</span>
                 </div>
 
                 <div class="header-right">
@@ -124,16 +125,17 @@
                         <span class="material-symbols-outlined icon-light">light_mode</span>
                         <span class="material-symbols-outlined icon-dark">dark_mode</span>
                     </button>
-                    <button class="notification-btn" id="notificationBtn" aria-label="Notifications">
+                    <div class="header-divider"></div>
+                    <button class="header-btn notification-btn" id="notificationBtn" aria-label="Notifications">
                         <span class="material-symbols-outlined">notifications</span>
+                        <span class="notification-dot"></span>
                     </button>
-                    <div class="user-profile">
-                        <div class="user-info">
-                            <p class="user-name">Alex Morgan</p>
-                            <p class="user-role">Security Analyst</p>
-                        </div>
-                        <div class="user-avatar" id="userAvatar">AM</div>
-                    </div>
+                    <button class="header-btn" id="helpBtn" aria-label="Help">
+                        <span class="material-symbols-outlined">help_outline</span>
+                    </button>
+                    <button class="header-btn" id="profileBtn" aria-label="Profile">
+                        <span class="material-symbols-outlined">account_circle</span>
+                    </button>
                 </div>
             </header>
 
