--- a/webApp/src/jsMain/resources/game.html
+++ b/webApp/src/jsMain/resources/game.html
@@ -38,6 +38,8 @@
     <link href="transitions.css" rel="stylesheet" />
     <!-- Shared UI Components -->
     <link href="shared-ui.css" rel="stylesheet" />
+    <!-- Unified Header Styles -->
+    <link href="shared-header.css" rel="stylesheet" />
 </head>
 
 <body class="game-body">
@@ -115,11 +117,6 @@
                     <button class="menu-toggle" id="menuToggle" aria-label="Toggle menu">
                         <span class="material-symbols-outlined">menu</span>
                     </button>
-                    <nav class="breadcrumbs">
-                        <a href="dashboard.html">Dashboard</a>
-                        <span class="separator">/</span>
-                        <span class="current">Beat the Bot</span>
-                    </nav>
                 </div>
 
                 <div class="header-right">
@@ -127,13 +124,16 @@
                         <span class="material-symbols-outlined icon-light">light_mode</span>
                         <span class="material-symbols-outlined icon-dark">dark_mode</span>
                     </button>
-                    <div class="engine-status">
-                        <span class="status-dot pulse"></span>
-                        <span>Offline Engine V.2.4</span>
-                    </div>
-                    <button class="notification-btn" aria-label="Notifications">
+                    <div class="header-divider"></div>
+                    <button class="header-btn notification-btn" id="notificationBtn" aria-label="Notifications">
                         <span class="material-symbols-outlined">notifications</span>
                         <span class="notification-dot"></span>
+                    </button>
+                    <button class="header-btn" id="helpBtn" aria-label="Help">
+                        <span class="material-symbols-outlined">help_outline</span>
+                    </button>
+                    <button class="header-btn" id="profileBtn" aria-label="Profile">
+                        <span class="material-symbols-outlined">account_circle</span>
                     </button>
                 </div>
             </header>
