--- a/webApp/src/jsMain/resources/scanner.html
+++ b/webApp/src/jsMain/resources/scanner.html
@@ -37,6 +37,8 @@
     <link href="transitions.css" rel="stylesheet" />
     <!-- Shared UI Components -->
     <link href="shared-ui.css" rel="stylesheet" />
+    <!-- Unified Header Styles -->
+    <link href="shared-header.css" rel="stylesheet" />
 </head>
 
 <body class="scanner-body">
@@ -117,28 +119,23 @@
                     <button class="menu-toggle" id="menuToggle" aria-label="Toggle menu">
                         <span class="material-symbols-outlined">menu</span>
                     </button>
-                    <nav class="breadcrumbs">
-                        <span class="breadcrumb-item" data-i18n="NavDashboard">Dashboard</span>
-                        <span class="breadcrumb-separator">/</span>
-                        <span class="breadcrumb-current" data-i18n="NavScanMonitor">Scan Monitor</span>
-                    </nav>
                 </div>
 
                 <div class="header-right">
-                    <div class="engine-status" id="engineStatus">
-                        <span class="status-dot">
-                            <span class="status-ping"></span>
-                            <span class="status-core"></span>
-                        </span>
-                        <span class="status-text" data-i18n="EngineActive">Engine Active</span>
-                    </div>
                     <button class="theme-toggle" aria-label="Toggle theme" title="Toggle light/dark mode">
                         <span class="material-symbols-outlined icon-light">light_mode</span>
                         <span class="material-symbols-outlined icon-dark">dark_mode</span>
                     </button>
-                    <button class="notification-btn" id="notificationBtn" aria-label="Notifications">
+                    <div class="header-divider"></div>
+                    <button class="header-btn notification-btn" id="notificationBtn" aria-label="Notifications">
                         <span class="material-symbols-outlined">notifications</span>
-                        <span class="notification-badge"></span>
+                        <span class="notification-dot"></span>
+                    </button>
+                    <button class="header-btn" id="helpBtn" aria-label="Help">
+                        <span class="material-symbols-outlined">help_outline</span>
+                    </button>
+                    <button class="header-btn" id="profileBtn" aria-label="Profile">
+                        <span class="material-symbols-outlined">account_circle</span>
                     </button>
                 </div>
             </header>
