--- a/webApp/src/jsMain/resources/threat.html
+++ b/webApp/src/jsMain/resources/threat.html
@@ -36,6 +36,8 @@
     <link href="transitions.css" rel="stylesheet" />
     <!-- Shared UI Components -->
     <link href="shared-ui.css" rel="stylesheet" />
+    <!-- Unified Header Styles -->
+    <link href="shared-header.css" rel="stylesheet" />
 </head>
 
 <body class="threat-body">
@@ -118,13 +120,6 @@
                     <button class="menu-toggle" id="menuToggle" aria-label="Toggle menu">
                         <span class="material-symbols-outlined">menu</span>
                     </button>
-                    <nav class="breadcrumbs">
-                        <span data-i18n="BreadcrumbHome">Home</span>
-                        <span class="separator">/</span>
-                        <span data-i18n="BreadcrumbScans">Scans</span>
-                        <span class="separator">/</span>
-                        <span class="current" id="scanId">Scan #8021-AF</span>
-                    </nav>
                 </div>
 
                 <div class="header-right">
@@ -132,15 +127,17 @@
                         <span class="material-symbols-outlined icon-light">light_mode</span>
                         <span class="material-symbols-outlined icon-dark">dark_mode</span>
                     </button>
-                    <div class="engine-status">
-                        <span class="status-dot pulse"></span>
-                        <span data-i18n="EngineActive">Engine Active (Offline)</span>
-                    </div>
                     <div class="header-divider"></div>
-                    <button class="notification-btn" id="notificationBtn" aria-label="Notifications">
+                    <button class="header-btn notification-btn" id="notificationBtn" aria-label="Notifications">
                         <span class="material-symbols-outlined">notifications</span>
+                        <span class="notification-dot"></span>
                     </button>
-                    <div class="user-avatar">AD</div>
+                    <button class="header-btn" id="helpBtn" aria-label="Help">
+                        <span class="material-symbols-outlined">help_outline</span>
+                    </button>
+                    <button class="header-btn" id="profileBtn" aria-label="Profile">
+                        <span class="material-symbols-outlined">account_circle</span>
+                    </button>
                 </div>
             </header>
 
