--- a/webApp/src/jsMain/resources/trust.html
+++ b/webApp/src/jsMain/resources/trust.html
@@ -37,6 +37,8 @@
     <link href="shared-ui.css" rel="stylesheet" />
     <!-- Trust Centre Styles -->
     <link href="trust.css" rel="stylesheet" />
+    <!-- Unified Header Styles -->
+    <link href="shared-header.css" rel="stylesheet" />
 </head>
 
 <body class="trust-body">
@@ -117,10 +119,6 @@
                     <button class="menu-toggle" id="menuToggle" aria-label="Toggle menu">
                         <span class="material-symbols-outlined">menu</span>
                     </button>
-                    <div class="header-title">
-                        <h2>Trust Centre</h2>
-                        <p>Manage privacy controls, sensitivity, and security lists.</p>
-                    </div>
                 </div>
 
                 <div class="header-right">
@@ -128,13 +126,16 @@
                         <span class="material-symbols-outlined icon-light">light_mode</span>
                         <span class="material-symbols-outlined icon-dark">dark_mode</span>
                     </button>
-                    <span class="offline-badge">
-                        <span class="offline-dot"></span>
-                        Offline Mode Active
-                    </span>
-                    <button class="btn-audit" id="auditBtn">
-                        <span class="material-symbols-outlined">description</span>
-                        View Security Audit
+                    <div class="header-divider"></div>
+                    <button class="header-btn notification-btn" id="notificationBtn" aria-label="Notifications">
+                        <span class="material-symbols-outlined">notifications</span>
+                        <span class="notification-dot"></span>
+                    </button>
+                    <button class="header-btn" id="helpBtn" aria-label="Help">
+                        <span class="material-symbols-outlined">help_outline</span>
+                    </button>
+                    <button class="header-btn" id="profileBtn" aria-label="Profile">
+                        <span class="material-symbols-outlined">account_circle</span>
                     </button>
                 </div>
             </header>
