--- a/webApp/src/jsMain/resources/game.html
+++ b/webApp/src/jsMain/resources/game.html
@@ -40,6 +40,26 @@
     <link href="shared-ui.css" rel="stylesheet" />
     <!-- Unified Header Styles -->
     <link href="shared-header.css" rel="stylesheet" />
+
+    <!-- CRITICAL: Blocking theme init to prevent flash -->
+    <script>
+        (function () {
+            try {
+                var theme = localStorage.getItem('qrshield_theme');
+                if (theme === 'light') {
+                    document.documentElement.classList.remove('dark');
+                    document.documentElement.classList.add('light');
+                    document.documentElement.setAttribute('data-theme', 'light');
+                } else if (theme === 'auto' || !theme) {
+                    if (window.matchMedia && window.matchMedia('(prefers-color-scheme: light)').matches) {
+                        document.documentElement.classList.remove('dark');
+                        document.documentElement.classList.add('light');
+                        document.documentElement.setAttribute('data-theme', 'light');
+                    }
+                }
+            } catch (e) { }
+        })();
+    </script>
 </head>
 
 <body class="game-body">
