fix: Resolve critical results page dynamic content and history navigation bugs, and enhance UI with a more vibrant safe color and updated help icon.

--- a/webApp/src/jsMain/resources/onboarding.html
+++ b/webApp/src/jsMain/resources/onboarding.html
@@ -161,7 +161,7 @@
                         <span class="notification-dot"></span>
                     </button>
                     <button class="header-btn" id="helpBtn" aria-label="Help">
-                        <span class="material-symbols-outlined">help_outline</span>
+                        <span class="material-symbols-outlined">help</span>
                     </button>
                     <button class="header-btn" id="profileBtn" aria-label="Profile">
                         <span class="material-symbols-outlined">account_circle</span>
